# podium

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PODIUM_CLEANUP.md  README.md  TODOS.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
alembic/: env.py
alembic/versions/: 8210bae2b443_add_users_and_api_keys_tables.py  9983903398a2_initial_schema.py  a1b2c3d4e5f6_add_memories_table.py  b4590ddcd010_initial_schema.py  ca316cd7fec5_add_tool_call_fields_to_messages.py  dc368990e622_add_tool_call_fields_to_messages.py  e7f3a1b9c042_add_guest_support_to_users.py
app/: auth.py  config.py  database.py  errors.py  limiter.py  main.py  models.py  schemas.py
app/routers/: chat.py  documents.py  guest.py  keys.py  memories.py
app/services/: agent.py  critic.py  encryption.py  guest_auth.py  ingestion.py  llm.py  memory.py  (+4 more)
frontend/: next.config.ts  package-lock.json  package.json  proxy.ts  vitest.config.ts  vitest.setup.ts
infra/: alb.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  kms.tf  main.tf  monitoring.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  security_groups.tf  terraform.tf  valkey.tf  variables.tf  vpc.tf
scripts/: seed_demo_corpus.py
tests/: test_actor_critic.py  test_agent.py  test_agent_reliability.py  test_byok_and_guest_guards.py  test_chat_model_validation.py  test_config.py  test_conversations.py  test_dead_code_removed.py  test_document_upload.py  test_guest_auth.py  test_guest_session.py  test_llm_utils.py  test_memory_save.py  test_schemas.py  test_sse_params.py  test_tool_descriptions.py
(+68 files in other folders)
