[project]
name = "podium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "arc>=1.0",
    "arq>=0.25.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42.64",
    "cryptography>=46.0.5",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "litellm>=1.81.10",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.12.1",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "redis[hiredis]>=7.1.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.46",
    "sse-starlette>=3.2.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
